tests/language_modules/12_type_conflicts/valid/array_assignment_from_function.vf
module ArrayAssignmentFromFunction

function values() returns Array<Integer, 3>
is
    return [1, 2, 3]
end values

procedure main()
is
    let xs: Array<Integer, 3> = values()
    check true
end main

end ArrayAssignmentFromFunction