tests/language_modules/12_type_conflicts/invalid_semantics/result_assignment_ok_type_mismatch.vf
module ResultAssignmentOkTypeMismatch

error NotFound

function load() returns Result<Integer, NotFound>
is
    return ok 1
end load

procedure main()
is
    let outcome: Result<Boolean, NotFound> = load()
end main

end ResultAssignmentOkTypeMismatch